--- a/data/cities/oklahoma-city/cvs-pharmacy.yml
+++ b/data/cities/oklahoma-city/cvs-pharmacy.yml
@@ -1,11 +1,11 @@
-id: 651848703
+id: 497809853
 type: way
-latitude: 35.59517
-longitude: -97.56741
-postcode: ""
+latitude: 35.42153
+longitude: -97.44191
+postcode: "73135"
 city: Oklahoma City
-street: "North May Avenue"
-housenumber: 12301
+street: "Southeast 44th Street"
+housenumber: 4251
 phone: ""
 opening_hours: ""
 website: ""
