--- a/data/cities/coweta/shellys-hairitage-salon.yml
+++ b/data/cities/coweta/shellys-hairitage-salon.yml
@@ -1,11 +1,11 @@
-id: 951705247
-type: way
-latitude: 35.95711
-longitude: -95.64987
+id: 11481509927
+type: node
+latitude: 35.96281
+longitude: -95.65305
 postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
-housenumber: 14211
+housenumber: 
 phone: ""
 opening_hours: ""
 website: ""
