--- a/data/cities/coweta/sunflower-nutrition.yml
+++ b/data/cities/coweta/sunflower-nutrition.yml
@@ -6,6 +6,6 @@ postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
 housenumber: 13745
-phone: "+1 918 887 8255"
-opening_hours: "Mo-Fr 06:00-16:00; Sa-Su 08:00-14:00"
+phone: ""
+opening_hours: "Mo-Sa"
 website: ""
