--- a/data/cities/coweta/cook-portable-warehouses.yml
+++ b/data/cities/coweta/cook-portable-warehouses.yml
@@ -6,6 +6,6 @@ postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
 housenumber: 13669
-phone: "+1 918 316 9346"
+phone: "+1 479 215 6240"
 opening_hours: ""
-website: "http://www.cookportablewarehouses.com/"
+website: "https://cookstuff.com/"
