--- a/data/cities/stillwater/on-cue-2.yml
+++ b/data/cities/stillwater/on-cue-2.yml
@@ -1,10 +1,10 @@
-id: 369900549
+id: 198275256
 type: way
-latitude: 36.11687
-longitude: -97.12367
+latitude: 36.11556
+longitude: -97.05099
 postcode: "74074"
 city: Stillwater
-street: "West 6th Avenue"
+street: ""
 housenumber: 
 phone: ""
 opening_hours: ""
