--- a/data/cities/stillwater/on-cue.yml
+++ b/data/cities/stillwater/on-cue.yml
@@ -1,10 +1,10 @@
-id: 198275256
+id: 369900549
 type: way
-latitude: 36.11556
-longitude: -97.05099
+latitude: 36.11687
+longitude: -97.12367
 postcode: "74074"
 city: Stillwater
-street: ""
+street: "West 6th Avenue"
 housenumber: 
 phone: ""
 opening_hours: ""
