--- a/data/cities/oklahoma-city/apple-store.yml
+++ b/data/cities/oklahoma-city/apple-store.yml
@@ -8,4 +8,4 @@ street: "Northwest Expressway"
 housenumber: 
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.apple.com/retail/pennsquare"
