--- a/data/cities/norman/corkscrew-wine-and-spirits.yml
+++ b/data/cities/norman/corkscrew-wine-and-spirits.yml
@@ -7,5 +7,5 @@ city: Norman
 street: "West Lindsey Street"
 housenumber: 2319
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Th 09:00-22:00; Fr-Sa 09:00-23:00; Su 12:00-19:00"
 website: ""
