--- a/data/cities/norman/crest-fresh-market.yml
+++ b/data/cities/norman/crest-fresh-market.yml
@@ -6,6 +6,6 @@ postcode: "73069"
 city: Norman
 street: "Mount Williams Drive"
 housenumber: 2550
-phone: ""
-opening_hours: ""
-website: ""
+phone: "+1 405 809 8100"
+opening_hours: "24/7"
+website: "https://www.crestfoodsok.com/"
