--- a/data/cities/oklahoma-city/rei.yml
+++ b/data/cities/oklahoma-city/rei.yml
@@ -8,4 +8,4 @@ street: "Belle Isle Boulevard"
 housenumber: 1731
 phone: "+1-405-607-7226"
 opening_hours: ""
-website: "https://www.rei.com/stores/map"
+website: "https://www.rei.com/stores/oklahoma-city"
