--- a/data/cities/tulsa/quiktrip-south-sheridan-road.yml
+++ b/data/cities/tulsa/quiktrip-south-sheridan-road.yml
@@ -1,11 +1,11 @@
-id: 379700514
+id: 233145675
 type: way
-latitude: 36.14865
-longitude: -95.90549
-postcode: ""
+latitude: 36.08916
+longitude: -95.90512
+postcode: "74135"
 city: Tulsa
 street: "South Sheridan Road"
-housenumber: 1014
+housenumber: 5116
 phone: ""
 opening_hours: "24/7"
 website: ""
