--- a/data/cities/broken-arrow/phancy-phydeaux-pet-grooming.yml
+++ b/data/cities/broken-arrow/phancy-phydeaux-pet-grooming.yml
@@ -4,7 +4,7 @@ latitude: 36.0612
 longitude: -95.7325
 postcode: "74014"
 city: Broken Arrow
-street: "East Kenosha Street"
+street: "East 71st Street South"
 housenumber: 21910
 phone: "+1 918 254 7666"
 opening_hours: "Tu-Sa 07:30+"
