--- a/data/cities/broken-arrow/wild-meadows-cafe.yml
+++ b/data/cities/broken-arrow/wild-meadows-cafe.yml
@@ -4,7 +4,7 @@ latitude: 36.06122
 longitude: -95.73216
 postcode: "74014"
 city: Broken Arrow
-street: "East Kenosha Street"
+street: "East 71st Street South"
 housenumber: 21910
 phone: ""
 opening_hours: "Su-Th off; Fr 15:30-19:30; Sa 11:00-19:30"
