--- a/data/cities/broken-arrow/yale-cleaners.yml
+++ b/data/cities/broken-arrow/yale-cleaners.yml
@@ -5,7 +5,7 @@ longitude: -95.7287
 postcode: "74014"
 city: Broken Arrow
 street: "East Kenosha Street"
-housenumber: 
+housenumber: 4850
 phone: ""
-opening_hours: ""
+opening_hours: "Mo-Fr 07:00-19:00; Sa 08:00-17:00"
 website: ""
