--- a/data/cities/coweta/turbos-garage.yml
+++ b/data/cities/coweta/turbos-garage.yml
@@ -6,6 +6,6 @@ postcode: "74429"
 city: Coweta
 street: "South State Highway 51"
 housenumber: 12222
-phone: ""
+phone: "+1 918 887 8039"
 opening_hours: ""
 website: ""
