--- a/data/cities/oklahoma-city/metro-by-t-mobile.yml
+++ b/data/cities/oklahoma-city/metro-by-t-mobile.yml
@@ -1,11 +1,11 @@
-id: 11380365520
+id: 11209392883
 type: node
-latitude: 35.5456
-longitude: -97.61114
-postcode: "73132"
+latitude: 35.53601
+longitude: -97.5661
+postcode: "73116"
 city: Oklahoma City
-street: "Northwest Expressway"
+street: ""
 housenumber: 
 phone: ""
 opening_hours: ""
-website: "https://www.metrobyt-mobile.com/stores/bd/metro-by-t-mobile-warr-acres-ok-10223255/"
+website: "https://www.metrobyt-mobile.com/stores/bd/metro-by-t-mobile-oklahoma-city-ok-10207502/"
