--- a/data/cities/oklahoma-city/carmax.yml
+++ b/data/cities/oklahoma-city/carmax.yml
@@ -8,4 +8,4 @@ street: "East Memorial Road"
 housenumber: 1121
 phone: ""
 opening_hours: ""
-website: ""
+website: "https://www.carmax.com/stores/7248"
