--- a/data/cities/tulsa/carmax.yml
+++ b/data/cities/tulsa/carmax.yml
@@ -8,4 +8,4 @@ street: "South Memorial Drive"
 housenumber: 9131
 phone: ""
 opening_hours: "Mo-Fr 10:00-21:00; Sa 09:00-21:00"
-website: ""
+website: "https://www.carmax.com/stores/7191"
