--- a/data/cities/madill/walmart-supercenter.yml
+++ b/data/cities/madill/walmart-supercenter.yml
@@ -1,7 +1,7 @@
-id: 5315601782
-type: node
-latitude: 34.06999
-longitude: -96.76555
+id: 1286124005
+type: way
+latitude: 34.0695
+longitude: -96.76599
 postcode: "73446"
 city: Madill
 street: "South 1st Street"
