--- a/data/cities/noble/super-c-mart.yml
+++ b/data/cities/noble/super-c-mart.yml
@@ -6,6 +6,6 @@ postcode: "73068"
 city: Noble
 street: "North Main Street"
 housenumber: 619
-phone: ""
+phone: "+1 405-872-9233"
 opening_hours: "08:00-20:00"
 website: ""
