--- a/data/cities/owasso/advance-auto-parts.yml
+++ b/data/cities/owasso/advance-auto-parts.yml
@@ -4,7 +4,7 @@ latitude: 36.27914
 longitude: -95.851
 postcode: "74055"
 city: Owasso
-street: North Garnett Road
+street: North Garnett Road East
 housenumber: "10713"
 phone: ""
 opening_hours: Mo-Sa 07:30-20:00; Su 09:00-18:00
